# HLSLcc

./: .editorconfig  CMakeLists.txt  README.md
include/: ShaderInfo.h  UnityInstancingFlexibleArraySize.h  hlslcc.h  hlslcc.hpp  pstdint.h
src/: ControlFlowGraph.cpp  ControlFlowGraphUtils.cpp  DataTypeAnalysis.cpp  HLSLCrossCompilerContext.cpp  HLSLcc.cpp  HLSLccToolkit.cpp  Instruction.cpp  LoopTransform.cpp  Operand.cpp  Shader.cpp  ShaderInfo.cpp  UseDefineChains.cpp  decode.cpp  reflect.cpp  toGLSL.cpp  toGLSLDeclaration.cpp  toGLSLInstruction.cpp  toGLSLOperand.cpp  toMetal.cpp  toMetalDeclaration.cpp  toMetalInstruction.cpp  toMetalOperand.cpp
src/cbstring/: bsafe.c  bstraux.c
src/internal_includes/: ControlFlowGraph.h  ControlFlowGraphUtils.h  DataTypeAnalysis.h  Declaration.h  HLSLCrossCompilerContext.h  HLSLccToolkit.h  Instruction.h  LoopTransform.h  Operand.h  Shader.h  Translator.h  UseDefineChains.h  debug.h  languages.h  toGLSL.h  toGLSLOperand.h  toMetal.h  tokens.h
